--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
         <!--------------------------SIGNUP FORM START --------------------------------------------------------------------------------------------------------------------------------->
         <!-- ======================================== -->
         <!-- Sign up form -->
+        <CENTER>
 
         <section class="signup tw-place-items-center" id="signup1">
             <div class="container">
@@ -660,33 +661,33 @@
 
         <!-- Name -->
         <div>
-            <label for="name" class="block text-sm font-medium text-gray-700">Your Name</label>
+            <!-- <label for="name" class="block text-sm font-medium text-gray-700">Your Name</label> -->
             <input type="text" name="name" id="name" placeholder="Enter your name" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
         <!-- Email -->
         <div>
-            <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+            <!-- <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label> -->
             <input type="email" name="email" id="email" placeholder="Enter your email" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
         <!-- Password -->
         <div>
-            <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+            <!-- <label for="password" class="block text-sm font-medium text-gray-700">Password</label> -->
             <input type="password" name="pass" id="pass" placeholder="Enter your password" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
         <!-- Confirm Password -->
         <div>
-            <label for="re_pass" class="block text-sm font-medium text-gray-700">Confirm Password</label>
+            <!-- <label for="re_pass" class="block text-sm font-medium text-gray-700">Confirm Password</label> -->
             <input type="password" name="re_pass" id="re_pass" placeholder="Confirm your password" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
         <!-- Terms and Conditions -->
-        <div class="flex items-center">
-            <input type="checkbox" name="agree-term" id="agree-term" class="w-4 h-4 text-purple-500 focus:ring-2 focus:ring-purple-500 rounded">
-            <label for="agree-term" class="ml-2 text-sm text-gray-600">I agree to the <a href="#" class="text-purple-500 underline">Terms of Service</a>.</label>
-        </div>
+        <!-- <div class="flex items-center"> -->
+        <!--     <input type="checkbox" name="agree-term" id="agree-term" class="w-4 h-4 text-purple-500 focus:ring-2 focus:ring-purple-500 rounded"> -->
+        <!--     <label for="agree-term" class="ml-2 text-sm text-gray-600">I agree to the <a href="#" class="text-purple-500 underline">Terms of Service</a>.</label> -->
+        <!-- </div> -->
 <p>&nbsp</p>
         <!-- Submit Button -->
         <div class="form-group form-button">
@@ -702,6 +703,7 @@
                     </div>
                 </div>
             </div>
+        </CENTER>
                 <CENTER>
                 <a
                     class="btn tw-bg-[#8de924] tw-shadow-lg tw-shadow-primary tw-transition-transform tw-duration-[0.3s] hover:tw-scale-x-[1.03]"
@@ -718,26 +720,27 @@
 <!--------------------------LOGIN FORM START --------------------------------------------------------------------------------------------------------------------------------->
 <!-- ======================================== -->
 <!-- Sign up form -->
+        <CENTER>
 <section class="signup tw-place-items-center" id="login1">
-    <div class="container">
+    <div class="container tw-place-items-center">
         <div class="signup-content">
             <div class="signup-image">
                 <figure><img src="./imgs/private/CN-Icon8.png" style="border-radius: 8%;" alt="sing up image"></figure>
             </div>
-            <div class="signup-form">
+            <div class="signup-form tw-place-items-center">
                 <h1 style="font-size: 24px; color: #ffffff;">Log In</h1><P>&nbsp;</P>
     <form method="POST" class="space-y-6 bg-white p-10 rounded-3xl shadow-2xl max-w-md w-full">
         <!-- Form Header -->
 
         <!-- Email -->
         <div>
-            <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+            <!-- <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label> -->
             <input type="email" name="email" id="email" placeholder="Enter your email" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
         <!-- Password -->
         <div>
-            <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+            <!-- <label for="password" class="block text-sm font-medium text-gray-700">Password</label> -->
             <input type="password" name="pass" id="pass" placeholder="Enter your password" class="mt-2 w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:outline-none">
         </div>
 
@@ -763,6 +766,7 @@
             
         </div>
     </div>
+        </CENTER>
         <CENTER>
         <a
             class="btn tw-bg-[#8de924] tw-shadow-lg tw-shadow-primary tw-transition-transform tw-duration-[0.3s] hover:tw-scale-x-[1.03]"
