--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     class="tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base max-md:tw-w-full max-md:tw-flex-col max-md:tw-place-content-center"
                 >
                     <a
-                        href="#signup"
+                        href="#signup1"
                         aria-label="signup"
                         class="tw-rounded-full tw-bg-white tw-px-3 tw-py-2 tw-text-black tw-transition-transform tw-duration-[0.3s] hover:tw-translate-x-2"
                     >
@@ -746,11 +746,11 @@
 
         <!-- Submit Button -->
                     <div class="form-group form-button">
-                        <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
+                        <input type="submit" name="signup" id="signup" class="form-submit" value="Login"/>
                     </div>
 
         <!-- Footer Link -->
-        <p class="text-sm text-center text-gray-600">Don't have an account? <a href="#signup" class="text-purple-500 font-semibold underline">Sign Up</a></p>
+        <p class="text-sm text-center text-gray-600">Don't have an account? <a href="#signup1" class="text-purple-500 font-semibold underline">Sign Up</a></p>
     </form>
                 <!-- <form method="POST" class="register-form" id="register-form"> -->
                 <!--     <div class="form-group"> -->
